# robot_2d_description

./: CMakeLists.txt  README.md  package.xml
scripts/: autoRun.sh  mutable_trajectory_plot.py  parabola_plot_tools.py  parseLog.py  plotfunctions.py  potential_test_GB_optim.py  robot_2d_test.py  robot_2d_test_GBoptim.py  robot_2d_test_long.py  robot_2d_test_long_box.py  robot_2d_test_spirale.py  test_parabola_2d.py  viewer_display_library_OPTIM.py
src/hpp/corbaserver/robot_2d/: robot.py
urdf/: box.urdf  cylinder_obstacle.urdf  cylinder_obstacle2.urdf  environment_2d.urdf  environment_2d_harder.urdf  large_object.urdf  object.urdf
